Test file for getting info about language specification

--- a/dynsem/pom.xml
+++ b/dynsem/pom.xml
@@ -121,6 +121,11 @@
       <type>spoofax-language</type>
       <version>${metaborg-version}</version>
     </dependency>
+        <dependency>
+      <groupId>org.metaborg</groupId>
+      <artifactId>org.metaborg.spoofax.meta.core</artifactId>
+      <version>${metaborg-version}</version>
+    </dependency>
   </dependencies>
   <profiles>
     <profile>
