--- a/org.metaborg.meta.interpreter.framework/pom.xml
+++ b/org.metaborg.meta.interpreter.framework/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.metaborg</groupId>
 		<artifactId>parent.java</artifactId>
-		<version>2.1.0-SNAPSHOT</version>
+		<version>2.1.0</version>
 		<relativePath>../../releng/parent/java</relativePath>
 	</parent>
 	<dependencies>
