--- a/dynsem2coq/pom.xml
+++ b/dynsem2coq/pom.xml
@@ -11,7 +11,7 @@
   <parent>
     <groupId>org.metaborg</groupId>
     <artifactId>parent.language</artifactId>
-    <version>2.2.0-SNAPSHOT</version>
+    <version>2.2.0</version>
     <relativePath>../../releng/parent/language</relativePath>
   </parent>
 
