Adds the very root (nothing functional yet) of a DynSem-in-DynSem specification

--- a/dynsem/dynsem.properties
+++ b/dynsem/dynsem.properties
@@ -6,14 +6,14 @@ source.version = 2.3.0-SNAPSHOT
 source.extensions = ds
 
 # start symbol to use for parsing programs in this language
-source.startsymbol = Prog
+source.startsymbol = Eval
 
 # constructor name/arity of reduction entry point
-source.initconstructor.name = Program
-source.initconstructor.arity = 1
+source.initconstructor.name = Eval
+source.initconstructor.arity = 2
 
 # path to interpreter project, absolute or relative to the language project
-project.path = ../ds.interpreter/
+project.path = ../org.metaborg.meta.lang.dynsem.metainterpreter/
 
 # (optional) enable/disable creation of the target project
 project.create = true
@@ -23,10 +23,10 @@ project.clean = true
 
 # groupid & artifactid for the interpreter project
 project.groupid = org.metaborg
-project.artifactid = simpl.interpreter
+project.artifactid = dynsem.metainterpreter
 
 # package name for manually implemented interpreter nodes
-project.nativepackage = simpl.interpreter.natives
+project.nativepackage = dynsem.metainterpreter.natives
 
 # (optional) Enable generation of a JUnit test suite
 project.generatejunit = true
