Enables debug and safe components for generated interpreter

--- a/dynsem/dynsem.properties
+++ b/dynsem/dynsem.properties
@@ -34,3 +34,9 @@ project.generatejunit = true
 project.testjavapath = src/test/java
 # (optional) Specify the path to the test files
 project.testspath = src/test/resources
+
+# ensure that semantic components are never null
+interpreter.safecomponents = true
+
+# enable debug
+interpreter.debug = true
