Sets up towards generating a interpreter projects which use the ds-in-ds backend

--- a/dynsem/dynsem.properties
+++ b/dynsem/dynsem.properties
@@ -12,6 +12,8 @@ source.startsymbol = Eval
 source.initconstructor.name = Eval
 source.initconstructor.arity = 2
 
+backend = ds
+
 # path to interpreter project, absolute or relative to the language project
 project.path = ../org.metaborg.meta.lang.dynsem.metainterpreter/
 
@@ -27,6 +29,8 @@ project.artifactid = dynsem.metainterpreter
 
 # package name for manually implemented interpreter nodes
 project.nativepackage = dynsem.metainterpreter.natives
+
+project.specpath = src/main/resources/meta-specification.aterm
 
 # (optional) Enable generation of a JUnit test suite
 project.generatejunit = true
