Renames meta-meta-interpreter project

--- a/dynsem/dynsem.properties
+++ b/dynsem/dynsem.properties
@@ -15,7 +15,7 @@ source.initconstructor.arity = 2
 backend = ds
 
 # path to interpreter project, absolute or relative to the language project
-project.path = ../org.metaborg.meta.lang.dynsem.metainterpreter/
+project.path = ../dynsem.metainterpreter/
 
 # (optional) enable/disable creation of the target project
 project.create = true
