--- a/dynsem.metainterpreter/pom.xml
+++ b/dynsem.metainterpreter/pom.xml
@@ -58,7 +58,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
       </plugin>
     </plugins>
   </build>
-  <repositories>
+<!--   <repositories>
     <repository>
       <id>metaborg-release-repo</id>
       <url>http://artifacts.metaborg.org/content/repositories/releases/</url>
@@ -79,7 +79,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
         <enabled>true</enabled>
       </snapshots>
     </repository>
-  </repositories>
+  </repositories> -->
   <properties>
     <slf4j.version>1.7.10</slf4j.version>
   </properties>
@@ -127,4 +127,64 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
       <version>1.1.2</version>
     </dependency>
   </dependencies>
+  <profiles>
+    <profile>
+      <id>standalone</id>
+      <repositories>
+        <repository>
+          <id>metaborg-release-repo</id>
+          <url>http://artifacts.metaborg.org/content/repositories/releases/</url>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+        </repository>
+        <repository>
+          <id>metaborg-snapshot-repo</id>
+          <url>http://artifacts.metaborg.org/content/repositories/snapshots/</url>
+          <releases>
+            <enabled>false</enabled>
+          </releases>
+          <snapshots>
+            <enabled>true</enabled>
+          </snapshots>
+        </repository>
+        <repository>
+          <id>spoofax-eclipse-repo</id>
+          <url>http://download.spoofax.org/update/nightly/</url>
+          <layout>p2</layout>
+          <releases>
+            <enabled>false</enabled>
+          </releases>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+        </repository>
+      </repositories>
+      <pluginRepositories>
+        <pluginRepository>
+          <id>metaborg-release-repo</id>
+          <url>http://artifacts.metaborg.org/content/repositories/releases/</url>
+          <releases>
+            <enabled>true</enabled>
+          </releases>
+          <snapshots>
+            <enabled>false</enabled>
+          </snapshots>
+        </pluginRepository>
+        <pluginRepository>
+          <id>metaborg-snapshot-repo</id>
+          <url>http://artifacts.metaborg.org/content/repositories/snapshots/</url>
+          <releases>
+            <enabled>false</enabled>
+          </releases>
+          <snapshots>
+            <enabled>true</enabled>
+          </snapshots>
+        </pluginRepository>
+      </pluginRepositories>
+    </profile>
+  </profiles>
 </project>
