Adds DynSem compile dependency on DynSem

--- a/dynsem/metaborg.yaml
+++ b/dynsem/metaborg.yaml
@@ -6,6 +6,7 @@ dependencies:
   compile:
   - org.metaborg:org.metaborg.meta.lang.esv:${metaborgVersion}
   - org.metaborg:org.metaborg.meta.lang.template:${metaborgVersion}
+  - org.metaborg:dynsem:${metaborgVersion}
   source:
   - org.metaborg:meta.lib.spoofax:${metaborgVersion}
 exports:
