--- a/dynsem/dynsem.properties
+++ b/dynsem/dynsem.properties
@@ -2,7 +2,7 @@
 source.langname = ds
 
 # version of this language
-source.version = 2.3.0-SNAPSHOT
+source.version = 2.3.0
 source.extensions = ds
 
 # start symbol to use for parsing programs in this language
