--- a/dynsem/pom.xml
+++ b/dynsem/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>org.metaborg</groupId>
 		<artifactId>parent.language</artifactId>
-		<version>2.3.0-SNAPSHOT</version>
+		<version>2.3.0</version>
 		<relativePath>../../releng/parent/language</relativePath>
 	</parent>
 
