Update repositories to HTTPS.

--- a/dynsem2coq/pom.xml
+++ b/dynsem2coq/pom.xml
@@ -65,7 +65,7 @@
 			<repositories>
 				<repository>
 					<id>metaborg-release-repo</id>
-					<url>http://artifacts.metaborg.org/content/repositories/releases/</url>
+					<url>https://artifacts.metaborg.org/content/repositories/releases/</url>
 					<releases>
 						<enabled>true</enabled>
 					</releases>
@@ -75,7 +75,7 @@
 				</repository>
 				<repository>
 					<id>metaborg-snapshot-repo</id>
-					<url>http://artifacts.metaborg.org/content/repositories/snapshots/</url>
+					<url>https://artifacts.metaborg.org/content/repositories/snapshots/</url>
 					<releases>
 						<enabled>false</enabled>
 					</releases>
@@ -98,7 +98,7 @@
 			<pluginRepositories>
 				<pluginRepository>
 					<id>metaborg-release-repo</id>
-					<url>http://artifacts.metaborg.org/content/repositories/releases/</url>
+					<url>https://artifacts.metaborg.org/content/repositories/releases/</url>
 					<releases>
 						<enabled>true</enabled>
 					</releases>
@@ -108,7 +108,7 @@
 				</pluginRepository>
 				<pluginRepository>
 					<id>metaborg-snapshot-repo</id>
-					<url>http://artifacts.metaborg.org/content/repositories/snapshots/</url>
+					<url>https://artifacts.metaborg.org/content/repositories/snapshots/</url>
 					<releases>
 						<enabled>false</enabled>
 					</releases>
