--- a/dynsem.metainterpreter/pom.xml
+++ b/dynsem.metainterpreter/pom.xml
@@ -61,7 +61,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 <!--   <repositories>
     <repository>
       <id>metaborg-release-repo</id>
-      <url>http://artifacts.metaborg.org/content/repositories/releases/</url>
+      <url>https://artifacts.metaborg.org/content/repositories/releases/</url>
       <releases>
         <enabled>true</enabled>
       </releases>
@@ -71,7 +71,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
     </repository>
     <repository>
       <id>metaborg-snapshot-repo</id>
-      <url>http://artifacts.metaborg.org/content/repositories/snapshots/</url>
+      <url>https://artifacts.metaborg.org/content/repositories/snapshots/</url>
       <releases>
         <enabled>false</enabled>
       </releases>
@@ -133,7 +133,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
       <repositories>
         <repository>
           <id>metaborg-release-repo</id>
-          <url>http://artifacts.metaborg.org/content/repositories/releases/</url>
+          <url>https://artifacts.metaborg.org/content/repositories/releases/</url>
           <releases>
             <enabled>true</enabled>
           </releases>
@@ -143,7 +143,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
         </repository>
         <repository>
           <id>metaborg-snapshot-repo</id>
-          <url>http://artifacts.metaborg.org/content/repositories/snapshots/</url>
+          <url>https://artifacts.metaborg.org/content/repositories/snapshots/</url>
           <releases>
             <enabled>false</enabled>
           </releases>
@@ -166,7 +166,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
       <pluginRepositories>
         <pluginRepository>
           <id>metaborg-release-repo</id>
-          <url>http://artifacts.metaborg.org/content/repositories/releases/</url>
+          <url>https://artifacts.metaborg.org/content/repositories/releases/</url>
           <releases>
             <enabled>true</enabled>
           </releases>
@@ -176,7 +176,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
         </pluginRepository>
         <pluginRepository>
           <id>metaborg-snapshot-repo</id>
-          <url>http://artifacts.metaborg.org/content/repositories/snapshots/</url>
+          <url>https://artifacts.metaborg.org/content/repositories/snapshots/</url>
           <releases>
             <enabled>false</enabled>
           </releases>
