--- a/dynsem/pom.xml
+++ b/dynsem/pom.xml
@@ -130,7 +130,7 @@
 			<repositories>
 				<repository>
 					<id>metaborg-release-repo</id>
-					<url>http://artifacts.metaborg.org/content/repositories/releases/</url>
+					<url>https://artifacts.metaborg.org/content/repositories/releases/</url>
 					<releases>
 						<enabled>true</enabled>
 					</releases>
@@ -140,7 +140,7 @@
 				</repository>
 				<repository>
 					<id>metaborg-snapshot-repo</id>
-					<url>http://artifacts.metaborg.org/content/repositories/snapshots/</url>
+					<url>https://artifacts.metaborg.org/content/repositories/snapshots/</url>
 					<releases>
 						<enabled>false</enabled>
 					</releases>
@@ -163,7 +163,7 @@
 			<pluginRepositories>
 				<pluginRepository>
 					<id>metaborg-release-repo</id>
-					<url>http://artifacts.metaborg.org/content/repositories/releases/</url>
+					<url>https://artifacts.metaborg.org/content/repositories/releases/</url>
 					<releases>
 						<enabled>true</enabled>
 					</releases>
@@ -173,7 +173,7 @@
 				</pluginRepository>
 				<pluginRepository>
 					<id>metaborg-snapshot-repo</id>
-					<url>http://artifacts.metaborg.org/content/repositories/snapshots/</url>
+					<url>https://artifacts.metaborg.org/content/repositories/snapshots/</url>
 					<releases>
 						<enabled>false</enabled>
 					</releases>
