--- a/org.metaborg.meta.lang.dynsem.interpreter/pom.xml
+++ b/org.metaborg.meta.lang.dynsem.interpreter/pom.xml
@@ -253,7 +253,7 @@
 			<repositories>
 				<repository>
 					<id>metaborg-release-repo</id>
-					<url>http://artifacts.metaborg.org/content/repositories/releases/</url>
+					<url>https://artifacts.metaborg.org/content/repositories/releases/</url>
 					<releases>
 						<enabled>true</enabled>
 					</releases>
@@ -263,7 +263,7 @@
 				</repository>
 				<repository>
 					<id>metaborg-snapshot-repo</id>
-					<url>http://artifacts.metaborg.org/content/repositories/snapshots/</url>
+					<url>https://artifacts.metaborg.org/content/repositories/snapshots/</url>
 					<releases>
 						<enabled>false</enabled>
 					</releases>
@@ -286,7 +286,7 @@
 			<pluginRepositories>
 				<pluginRepository>
 					<id>metaborg-release-repo</id>
-					<url>http://artifacts.metaborg.org/content/repositories/releases/</url>
+					<url>https://artifacts.metaborg.org/content/repositories/releases/</url>
 					<releases>
 						<enabled>true</enabled>
 					</releases>
@@ -296,7 +296,7 @@
 				</pluginRepository>
 				<pluginRepository>
 					<id>metaborg-snapshot-repo</id>
-					<url>http://artifacts.metaborg.org/content/repositories/snapshots/</url>
+					<url>https://artifacts.metaborg.org/content/repositories/snapshots/</url>
 					<releases>
 						<enabled>false</enabled>
 					</releases>
@@ -311,11 +311,11 @@
 	<distributionManagement>
 		<snapshotRepository>
 			<id>${deployRepositoryId}</id>
-			<url>http://artifacts.metaborg.org/content/repositories/snapshots/</url>
+			<url>https://artifacts.metaborg.org/content/repositories/snapshots/</url>
 		</snapshotRepository>
 		<repository>
 			<id>${deployRepositoryId}</id>
-			<url>http://artifacts.metaborg.org/content/repositories/releases/</url>
+			<url>https://artifacts.metaborg.org/content/repositories/releases/</url>
 		</repository>
 	</distributionManagement>
 
