Fix compilation of dysem2coq project

--- a/dynsem2coq/metaborg.yaml
+++ b/dynsem2coq/metaborg.yaml
@@ -4,6 +4,7 @@ name: dynsem2coq
 dependencies:
   compile:
   - org.metaborg:org.metaborg.meta.lang.esv:${metaborgVersion}
+  - org.metaborg:dynsem:${metaborgVersion}
   source:
   - org.metaborg:meta.lib.spoofax:${metaborgVersion}
   - org.metaborg:org.metaborg.lang.coq:${metaborgVersion}
