--- a/org.metaborg.meta.lang.dynsem.interpreter/pom.xml
+++ b/org.metaborg.meta.lang.dynsem.interpreter/pom.xml
@@ -39,25 +39,25 @@
 			<artifactId>org.strategoxt.strj</artifactId>
 			<version>2.5.0-SNAPSHOT</version>
 		</dependency>
-    <dependency>
-      <groupId>org.metaborg</groupId>
-      <artifactId>org.metaborg.core</artifactId>
-      <version>${metaborg-version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.metaborg</groupId>
-      <artifactId>org.metaborg.spoofax.core</artifactId>
-      <version>${metaborg-version}</version>
-    </dependency>
+		<dependency>
+			<groupId>org.metaborg</groupId>
+			<artifactId>org.metaborg.core</artifactId>
+			<version>${metaborg-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.metaborg</groupId>
+			<artifactId>org.metaborg.spoofax.core</artifactId>
+			<version>${metaborg-version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.metaborg</groupId>
 			<artifactId>dynsem.lib.stratego.javastrat</artifactId>
-			<version>2.5.0-SNAPSHOT</version>
+			<version>${metaborg-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.metaborg</groupId>
 			<artifactId>dynsem.lib.stratego.jar</artifactId>
-			<version>2.5.0-SNAPSHOT</version>
+			<version>${metaborg-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -95,8 +95,25 @@
 				<version>3.7.0</version>
 				<configuration>
 					<source>1.8</source>
-					<target>1.8</target>
+					<target>1.9</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>add-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>${project.build.directory}/generated-sources/annotations</source>
+							</sources>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
