--- a/org.metaborg.meta.lang.dynsem.interpreter/.settings/org.jboss.tools.maven.apt.prefs
+++ b/org.metaborg.meta.lang.dynsem.interpreter/.settings/org.jboss.tools.maven.apt.prefs
@@ -1,3 +1,3 @@
 eclipse.preferences.version=1
 org.jboss.tools.maven.apt.aptProcessDuringReconcile=true
-org.jboss.tools.maven.apt.mode=maven_execution
+org.jboss.tools.maven.apt.mode=jdt_apt
