--- a/org.metaborg.meta.lang.dynsem.interpreter/pom.xml
+++ b/org.metaborg.meta.lang.dynsem.interpreter/pom.xml
@@ -3,13 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.metaborg</groupId>
 	<artifactId>org.metaborg.meta.lang.dynsem.interpreter</artifactId>
-	<version>2.5.0-SNAPSHOT</version>
+	<version>2.5.0</version>
 	<name>DynSem Interpreter</name>
 
 	<properties>
 		<forceContextQualifier>qualifier</forceContextQualifier>
 
-		<metaborg-version>2.5.0-SNAPSHOT</metaborg-version>
+		<metaborg-version>2.5.0</metaborg-version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -37,7 +37,7 @@
 		<dependency>
 			<groupId>org.metaborg</groupId>
 			<artifactId>org.strategoxt.strj</artifactId>
-			<version>2.5.0-SNAPSHOT</version>
+			<version>2.5.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.metaborg</groupId>
