Add support for conforming rule results to interop values. Fixes entry point generators for Graal 1.0.0-rc9.

--- a/org.metaborg.meta.lang.dynsem.interpreter/pom.xml
+++ b/org.metaborg.meta.lang.dynsem.interpreter/pom.xml
@@ -43,11 +43,31 @@
 			<groupId>org.metaborg</groupId>
 			<artifactId>org.metaborg.core</artifactId>
 			<version>${metaborg-version}</version>
+			<exclusions>
+        <exclusion>
+          <groupId>com.oracle.truffle</groupId>
+          <artifactId>truffle-api</artifactId>
+        </exclusion>
+          <exclusion>
+          <groupId>com.oracle.truffle</groupId>
+          <artifactId>truffle-dsl-processor</artifactId>
+        </exclusion>
+      </exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.metaborg</groupId>
 			<artifactId>org.metaborg.spoofax.core</artifactId>
 			<version>${metaborg-version}</version>
+			<exclusions>
+        <exclusion>
+          <groupId>com.oracle.truffle</groupId>
+          <artifactId>truffle-api</artifactId>
+        </exclusion>
+          <exclusion>
+          <groupId>com.oracle.truffle</groupId>
+          <artifactId>truffle-dsl-processor</artifactId>
+        </exclusion>
+      </exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.metaborg</groupId>
