--- a/dynsem/metaborg.yaml
+++ b/dynsem/metaborg.yaml
@@ -1,7 +1,7 @@
 ---
 id: org.metaborg:dynsem:${metaborgVersion}
 name: ds
-metaborgVersion: 2.5.13
+metaborgVersion: 2.6.0-SNAPSHOT
 dependencies:
   compile:
   - org.metaborg:org.metaborg.meta.lang.esv:${metaborgVersion}
