--- a/dynsem.metainterpreter/pom.xml
+++ b/dynsem.metainterpreter/pom.xml
@@ -4,7 +4,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   <name>ds Interpreter</name>
   <groupId>org.metaborg</groupId>
   <artifactId>dynsem.metainterpreter</artifactId>
-  <version>2.6.0-SNAPSHOT</version>
+  <version>2.5.16</version>
   <build>
     <plugins>
       <plugin>
@@ -87,7 +87,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
     <dependency>
       <groupId>org.metaborg</groupId>
       <artifactId>org.metaborg.meta.lang.dynsem.interpreter</artifactId>
-      <version>2.6.0-SNAPSHOT</version>
+      <version>2.5.16</version>
     </dependency>
     <dependency>
       <groupId>com.oracle.truffle</groupId>
@@ -103,7 +103,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
     <dependency>
       <groupId>org.metaborg</groupId>
       <artifactId>org.spoofax.terms</artifactId>
-      <version>2.6.0-SNAPSHOT</version>
+      <version>2.5.16</version>
     </dependency>
     <dependency>
       <groupId>com.martiansoftware</groupId>
