--- a/org.metaborg.meta.interpreter.framework/pom.xml
+++ b/org.metaborg.meta.interpreter.framework/pom.xml
@@ -35,10 +35,13 @@
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 		</dependency>
+		<!-- Required for Guava >= 27.0: -->
+		<!--
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>failureaccess</artifactId>
 		</dependency>
+		-->
 	</dependencies>
 
 	<build>
