--- a/org.metaborg.meta.lang.dynsem.interpreter/pom.xml
+++ b/org.metaborg.meta.lang.dynsem.interpreter/pom.xml
@@ -71,6 +71,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
+			<version>2.1.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.google.code.findbugs</groupId>
 			<artifactId>annotations</artifactId>
 			<version>3.0.1</version>
@@ -167,6 +173,7 @@
 							!sun.nio.cs,
 							!org.junit,
 							!javax*,
+							!jakarta*,
 							!org.xml*,
 							org.spoofax*,
 							org.metaborg*,
