Move some shared code from JSGLR to jsglr.shared

--- a/org.metaborg.meta.interpreter.framework/pom.xml
+++ b/org.metaborg.meta.interpreter.framework/pom.xml
@@ -20,6 +20,11 @@
 			<artifactId>org.spoofax.terms</artifactId>
 			<version>${metaborg-version}</version>
 		</dependency>
+                <dependency>
+			<groupId>org.metaborg</groupId>
+			<artifactId>jsglr.shared</artifactId>
+			<version>${metaborg-version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.metaborg</groupId>
 			<artifactId>org.spoofax.interpreter.core</artifactId>
