--- a/org.metaborg.meta.lang.dynsem.interpreter/pom.xml
+++ b/org.metaborg.meta.lang.dynsem.interpreter/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>org.strategoxt.strj</artifactId>
 			<version>2.6.0-SNAPSHOT</version>
 		</dependency>
+			<dependency>
+			<groupId>org.metaborg</groupId>
+			<artifactId>jsglr.shared</artifactId>
+			<version>2.6.0-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>org.metaborg</groupId>
 			<artifactId>org.metaborg.core</artifactId>
