--- a/dynsem2coq/metaborg.yaml
+++ b/dynsem2coq/metaborg.yaml
@@ -1,6 +1,7 @@
 ---
 id: org.metaborg:dynsem2coq:${metaborgVersion}
 name: dynsem2coq
+metaborgVersion: 2.6.0-SNAPSHOT
 dependencies:
   compile:
   - org.metaborg:org.metaborg.meta.lang.esv:${metaborgVersion}
